fixed staycation card spacing. Edited title and more link

--- a/css/main.css
+++ b/css/main.css
@@ -172,10 +172,11 @@ button {
   max-height: auto; }
 
 .news_top-row {
+  max-width: 95%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 0 2.5rem 0 2.5rem; }
+  margin: 0 4rem 0 4rem;
+  padding-bottom: 15px; }
 
 .news_header-left {
   font-family: 'josefin-sans';
@@ -228,8 +229,9 @@ button {
 .news_title {
   text-align: left;
   font-size: 1.4rem;
-  line-height: 1;
-  font-family: 'josefin-sans'; }
+  line-height: 1em;
+  font-family: 'josefin-sans';
+  margin-top: 1rem; }
 
 .news_title a:hover {
   color: #f5ad10; }
