--- a/styles/_news.scss
+++ b/styles/_news.scss
@@ -11,10 +11,11 @@
 
 
 .news_top-row{
+    max-width:95%;
     display:flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 0 2.5rem 0 2.5rem;
+    margin: 0 4rem 0 4rem;
+    padding-bottom:15px;
 
 }
 
@@ -85,8 +86,9 @@
 .news_title{
     text-align:left;
     font-size: 1.4rem;
-    line-height: 1;  
+    line-height: 1em;  
     font-family: 'josefin-sans';
+    margin-top:1rem;
 }
 
 .news_title a:hover{
